<resources>
    <string name="app_name">MeraBills Payment</string>
    <string name="add_payment"><u>Add Payment</u></string>
    <string name="payments">Payments</string>
    <string name="total_amount_rs_1000">Total Amount = ₹ <b>%s</b></string>
    <string name="save">Save</string>
    <string name="payment_description">%s  = ₹ %s</string>
    <string name="payments_saved_successfully">Payments Saved successfully</string>
    <string name="failed_to_save_payments">Failed to Save Payments</string>
    <string name="add_payment_bold"><b>Add Payment</b></string>
    <string name="you_have_added_all_payment_method">You have added all payment method</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="please_select_item_from_spinner">Please select item from spinner</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="rupee_symbol">₹</string>
    <string name="please_enter_a_valid_amount">Please enter a valid amount</string>

    <string-array name="payment_types">
        <item>Cash</item>
        <item>Bank Transfer</item>
        <item>Credit Card</item>
    </string-array>
</resources>